--- a/index.html
+++ b/index.html
@@ -72,13 +72,11 @@
           <li class="menu-developers"><a>For Developers</a></li>
           <li class="menu-sub-business"><a>For Business <i class="fas fa-chevron-down"> </i></a>
             <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
-              <li><a href="#">Drop Down 5</a></li>
+              <li><a href="#">Innovation</a></li>
+              <li><a href="#">Recruitment</a></li>
             </ul>
           </li>
-          <li class="menu-school"><a>For School</a></li>
+          <li class="menu-school"><a>For Campus</a></li>
           <li class="btn nav-signin"><a>LogIn/Sign Up</a></li>
         </ul>
       </nav><!-- #nav-menu-container -->
@@ -93,10 +91,11 @@
     <div class="container" style="padding-top: 40px; ">
         <div class="row">
           <div class="col-lg-6">
-            <h4>Practice Coding. Compete.</h4>
-            <h3>Find Jobs.</h3>
+            <h4>Code<br><span>Learn</span><br><span>Get Hired</span></h4>
+            <!-- <h3>Get Hired</h3> -->
+            <button type="submit" class="desk-off get-started">Get Started Today</button>
             
-            <div class="container" style="width: 80% !important; margin-left: 0px; padding-left: 0px;">
+            <div class="container form-slideshow">
 
                 <div id="myCarousel" class="carousel slide">
                   <!-- Wrapper for slides -->
@@ -124,14 +123,14 @@
               </div>
 
           </div>
-          <div class="col-lg-6">
+          <div class="col-lg-6 mob-off">
             <!--Login Starts-->
             <div id="tabs" class="login">
                 <div class="form-body">
                   <ul class="nav nav-tabs final-login">
                       <li class="active" data-target="#myCarousel" data-slide-to="0"><a data-toggle="tab" href="#sectionA">Developers</a></li>
                       <li data-target="#myCarousel" data-slide-to="1"><a data-toggle="tab" href="#sectionB">Businesses</a></li>
-                      <li data-target="#myCarousel" data-slide-to="2"><a data-toggle="tab" href="#sectionC">Schools</a></li>
+                      <li data-target="#myCarousel" data-slide-to="2"><a data-toggle="tab" href="#sectionC">Campus</a></li>
                   </ul>
                   <div class="tab-content">
                     <!--Section A-->
@@ -226,37 +225,37 @@
     <div class="swiper-container swiper1">
       <div class="swiper-wrapper">
         <div class="swiper-slide">
-          <div class="col-sm-4">
+          <div class="col-sm-4 col-xs-3">
             <img src="assist/img/Layer 869.jpg" style="width: 100%;">
           </div>
-          <div class="col-sm-8">
+          <div class="col-sm-8 col-xs-9">
             <h5>Two Cities Hackathon</h5>
             <p>on 15th July, 11:00PM</p>
           </div>
         </div>
         <div class="swiper-slide">
-          <div class="col-sm-4">
+          <div class="col-sm-4 col-xs-3">
             <img src="assist/img/Layer 870.jpg" style="width: 100%;">
           </div>
-          <div class="col-sm-8">
+          <div class="col-sm-8 col-xs-9">
             <h5>Intel Python Hack Fury</h5>
             <p>on 12th March, 09:00PM</p>
           </div>
         </div>
         <div class="swiper-slide">
-          <div class="col-sm-4">
+          <div class="col-sm-4 col-xs-3">
             <img src="assist/img/Layer 871.jpg" style="width: 100%;">
           </div>
-          <div class="col-sm-8">
+          <div class="col-sm-8 col-xs-9">
             <h5>Pitney Bowes SMB Ch...</h5>
             <p>on 15th July, 08:00 AM</p>
           </div>
         </div>
         <div class="swiper-slide">
-          <div class="col-sm-4">
+          <div class="col-sm-4 col-xs-3">
             <img src="assist/img/Layer 872.jpg" style="width: 100%;">
           </div>
-          <div class="col-sm-8">
+          <div class="col-sm-8 col-xs-9">
             <h5>Two Cities Hackathon</h5>
             <p>on 18 May 2018, 08:00 PM</p>
           </div>
@@ -278,33 +277,61 @@
 <section id="features">
   <div class="container">
     <h1>Practice Coding. Compete. Find Jobs.</h1>
-    <div class="col-sm-4">
+
+    <!-- Swiper -->
+    <div class="swiper-container mob_feature desk-off">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+              <div class="insider">
+                <img src="assist/img/Vector Smart Object1.svg">
+                <h2>Developers</h2>
+                <p>Engineering has Changed.<br> Have You ?<br>Participate in the most Competative chanllenges on InucbateIND Platform. </p>
+                <h3>Solve Challenges Now <i class="fas fa-arrow-right"> </i></h3>
+              </div>
+          </div>
+          <div class="swiper-slide">
+              <div class="insider">
+                <img src="assist/img/Vector Smart Object2.svg" style="fill: blue;">
+                <h2>Companies</h2>
+                <p>Are you hiring the best Talent ? <br> Put your Challenges on here and we will give you the best.</p>
+                <h3>Learn More <i class="fas fa-arrow-right"> </i></h3>
+              </div>
+          </div>
+          <div class="swiper-slide">
+              <div class="insider">
+                <img src="assist/img/Vector Smart Object3.svg">
+                <h2>Campus</h2>
+                <p>Compete with the best and become the leader you always wanted to. Be a part of building the largest and most engaged student coding community in the world.
+                    </p>
+                <h3>Learn More <i class="fas fa-arrow-right"> </i></h3>
+              </div>
+          </div>
+        </div>
+      </div>
+      <!--SWIPER ENDS-->
+
+
+    <div class="col-md-4 col-sm-4 col-xs-12 mob-off">
       <div class="insider">
         <img src="assist/img/Vector Smart Object1.svg">
         <h2>Developers</h2>
-        <p>Practice, Compete, Find Jobs IncubateIND is the largest learning and competition community for programmers</p>
+        <p>Engineering has Changed.<br> Have You ?<br>Participate in the most Competative chanllenges on InucbateIND Platform. </p>
         <h3>Solve Challenges Now <i class="fas fa-arrow-right"> </i></h3>
       </div>
     </div>
-    <div class="col-sm-4">
+    <div class="col-md-4 col-sm-4 col-xs-12 mob-off">
       <div class="insider">
         <img src="assist/img/Vector Smart Object2.svg" style="fill: blue;">
         <h2>Companies</h2>
-        <p>Assess, Screen, Interview
-            IncubateIND for Work is the leading 
-            end-to-end technical recruiting 
-            platform for hiring engineers</p>
+        <p>Are you hiring the best Talent ? <br> Put your Challenges on here and we will give you the best.</p>
         <h3>Learn More <i class="fas fa-arrow-right"> </i></h3>
       </div>
     </div>
-    <div class="col-sm-4">
+    <div class="col-md-4 col-sm-4 col-xs-12 mob-off">
       <div class="insider">
         <img src="assist/img/Vector Smart Object3.svg">
-        <h2>Schools</h2>
-        <p>Unleash your inner hacker
-            Be part of building the largest and 
-            most engaged student coding 
-            community in the world.
+        <h2>Campus</h2>
+        <p>Compete with the best and become the leader you always wanted to. Be a part of building the largest and most engaged student coding community in the world.
             </p>
         <h3>Learn More <i class="fas fa-arrow-right"> </i></h3>
       </div>
@@ -495,8 +522,8 @@
       <div class="container">
         <h1>Testimonials</h1>
           <ul class="nav nav-pills">
-            <li class="active"><a data-toggle="pill" href="#dev">Developers</a></li>
-            <li><a data-toggle="pill" href="#busi">Businesses</a></li>
+            <li class="active"><a data-toggle="pill" href="#dev">Business</a></li>
+            <li><a data-toggle="pill" href="#busi">Developers</a></li>
           </ul>
         <div class="insider">
             <div class="tab-content" style="padding-top: 40px;">
@@ -919,9 +946,15 @@
       var swiper1 = new Swiper('.swiper1', {
         slidesPerView: 4,
         spaceBetween: 15,
-        autoplay: 1200,
-        speed: 800,
+        loop: true,
+        speed: 1000,
+        grabCursor: true,
         simulateTouch: true,
+        autoplay: {
+          delay: 2000,
+          disableOnInteraction: false,
+        },
+
         navigation: {
           nextEl: '.swiper-button-next',
           prevEl: '.swiper-button-prev',
@@ -950,6 +983,7 @@
         spaceBetween: 15,
         autoplay: 1000,
         speed: 800,
+        grabCursor: true,
         simulateTouch: true,
         navigation: {
           nextEl: '.swiper-button-next',
@@ -981,6 +1015,7 @@
       var swiper3 = new Swiper('.swiper3', {
         slidesPerView: 3,
         spaceBetween: 30,
+        grabCursor: true,
         autoplay: 1000,
         speed: 800,
         simulateTouch: true,
@@ -1014,12 +1049,42 @@
       var swiper5 = new Swiper('.swiper5', {
         slidesPerView: 3,
         spaceBetween: 30,
+        grabCursor: true,
         autoplay: 1000,
         speed: 800,
         simulateTouch: true,
         breakpoints: {
           1024: {
             slidesPerView: 3,
+            spaceBetween: 15,
+          },
+          768: {
+            slidesPerView: 2,
+            spaceBetween: 15,
+          },
+          640: {
+            slidesPerView: 1,
+            spaceBetween: 15,
+          },
+          320: {
+            slidesPerView: 1,
+            spaceBetween: 15,
+          }
+        },
+        pagination: {
+          el: '.swiper-pagination5',
+          clickable: 'True',
+        },
+      });
+      var mob_feature = new Swiper('.mob_feature', {
+        slidesPerView: 1,
+        spaceBetween: 30,
+        grabCursor: true,
+        speed: 800,
+        simulateTouch: true,
+        breakpoints: {
+          1024: {
+            slidesPerView: 0,
             spaceBetween: 15,
           },
           768: {
