Second Fold mobile Tick

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
     <h1>Practice Coding. Compete. Find Jobs.</h1>
 
 
-    <div class="col-md-4 col-sm-4 col-xs-12 ">
+    <div class="col-md-4 hidden-sm hidden-xs">
       <div class="insider">
         <img src="assist/img/Vector Smart Object1.svg">
         <h2>Developers</h2>
@@ -287,7 +287,7 @@
         <h3>Solve Challenges Now <i class="fas fa-arrow-right"> </i></h3>
       </div>
     </div>
-    <div class="col-md-4 col-sm-4 col-xs-12 ">
+    <div class="col-md-4 hidden-sm hidden-xs">
       <div class="insider">
         <img src="assist/img/Vector Smart Object2.svg" style="fill: blue;">
         <h2>Companies</h2>
@@ -295,7 +295,7 @@
         <h3>Learn More <i class="fas fa-arrow-right"> </i></h3>
       </div>
     </div>
-    <div class="col-md-4 col-sm-4 col-xs-12 ">
+    <div class="col-md-4 hidden-sm hidden-xs">
       <div class="insider">
         <img src="assist/img/Vector Smart Object3.svg">
         <h2>Campus</h2>
@@ -306,7 +306,7 @@
     </div>
   </div>
 
-    <div class="row-card ">
+    <div class="row-card hidden-lg hidden-md ">
         <div class="card" style="margin-left: 20px;">
             <div class="insider">
               <img src="assist/img/Vector Smart Object1.svg">
