Landing Mob-Friendly

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
           </div>
           <div class="col-lg-6 ">
             <!--Login Starts-->
-            <div id="tabs" class="login">
+            <div id="tabs" class="login hidden-sm hidden-xs">
                 <div class="form-body">
                   <ul class="nav nav-tabs final-login">
                       <li class="active" data-target="#myCarousel" data-slide-to="0"><a data-toggle="tab" href="#sectionA">Developers</a></li>
