--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           <div class="col-lg-6">
             <h4>Code<br><span>Learn</span><br><span>Get Hired</span></h4>
             <!-- <h3>Get Hired</h3> -->
-            <button type="submit" class=" get-started">Get Started Today</button>
+            <button type="submit" class=" get-started hidden-lg hidden-md">Get Started Today</button>
             
             <div class="container form-slideshow">
 
@@ -1122,11 +1122,11 @@
             spaceBetween: 15,
           },
           768: {
-            slidesPerView: 2,
+            slidesPerView: 1,
             spaceBetween: 15,
           },
           640: {
-            slidesPerView: 2,
+            slidesPerView: 1,
             spaceBetween: 15,
           },
           320: {
