--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     Header
   ============================-->
   <header id="header">
-    <div class="container">
+    <div class="container header-mobile">
 
       <div id="logo" class="pull-left">
         <!-- ############################### Changes Next Line ############################### -->
