--- a/index.html
+++ b/index.html
@@ -1237,7 +1237,56 @@
   
 
 
+  <form action="" autocomplete="off">
+      <div class="row">
+        <div class="small-12 column">
+          <div class="form-floating-label">
+            <input type="email" id="email" name="email" required>
+            <label for="email">Email float up</label>
+          </div>
+        </div>
+      </div>
+    </form>
 
+
+<style>
+    
+.form-floating-label {
+  position: relative;
+  
+}
+
+.form-floating-label [type='text'],
+.form-floating-label [type='password'] {
+  margin-bottom: 0;
+  color: #8a8a8a;
+  font-size: 18px;
+  font-weight: 300;
+  padding: 30px 1rem 1rem 25px;
+}
+
+.form-floating-label label {
+  color: #cacaca;
+  font-size: 18px;
+  position: absolute;
+  pointer-events: none;
+  left: 25px;
+  bottom: 0;
+  transition: all 0.2s ease-in;
+  font-weight: 300;
+}
+
+.form-floating-label input:focus ~ label,
+.form-floating-label input:disabled[value] ~ label,
+.form-floating-label.has-value input ~ label {
+  top: 0;
+  font-size: 14px;
+  color: dodgerblue;
+  font-weight: 400;
+}
+
+
+</style>
 
 
 
@@ -1261,6 +1310,7 @@
       slidesPerView: 4,
       spaceBetween: 20,
       loop: true,
+      speed: 800,
       autoplay: {
         delay: 3000,
         disableOnInteraction: true,
@@ -1293,7 +1343,7 @@
     var swiper2 = new Swiper('.swiper2', {
       slidesPerView: 5,
       spaceBetween: 15,
-      // loop: true,
+      speed: 800,
       autoplay: {
         delay: 2500,
         disableOnInteraction: true,
