Slider Navigation Added

--- a/index.html
+++ b/index.html
@@ -230,6 +230,9 @@
           <div class="carousel-item" style="background-image: url('assets/images/Layer 933.jpg')"></div>
           <div class="carousel-item" style="background-image: url('assets/images/Layer 934.jpg')"></div>
           <div class="carousel-item" style="background-image: url('assets/images/Layer 935.jpg')"></div>
+          <!-- Carousel nav -->
+          <a class="carousel-control left" href="#carouselIndicators" data-slide="prev" style="left:0;">&lsaquo;</a>
+          <a class="carousel-control right" href="#carouselIndicators" data-slide="next" style="right:0;">&rsaquo;</a>
           <div class="container">
             <div class="carousel-caption ">
               <p>Discover Innovation. Create Radical.</p>
