--- a/index.html
+++ b/index.html
@@ -1384,6 +1384,7 @@
   <script>
 
     var swiper3 = new Swiper('.swiper3', {
+      autoHeight: true,
       pagination: {
         el: '.swiper-pagination-3',
         clickable: 'True',
