Testimonial and Team Member Word Limit

--- a/index.html
+++ b/index.html
@@ -1087,6 +1087,8 @@
                 <h3>Co-Founder, IncubateIND</h3>
                 <p>Samkit is a Technology lover and Start-Up enthusiast. He aims to provide innovative and sustainable tech
                   solutions to complex problems. He co-founded IncubateIND with the same vision. Mostly busy in fighting
+                  technological problems.Samkit is a Technology lover and Start-Up enthusiast. He aims to provide innovative and sustainable tech
+                  solutions to complex problems. He co-founded IncubateIND with the same vision. Mostly busy in fighting
                   technological problems.</p>
               </div>
             </div>
