Getstarted Form updated

--- a/index.html
+++ b/index.html
@@ -1059,7 +1059,7 @@
         <div class="inner-form">
           <input type="text" name="Full Name" placeholder="Full Name" style="border-radius: 5px 0px 0px 5px;">
           <input type="text" name="EmailID" placeholder="Email Id">
-          <input type="number" name="Mobile Number" placeholder="Mobile Number" style="border-radius: 0px 5px 5px 0px;">
+          <input type="text" name="Mobile Number" placeholder="Mobile Number" style="border-radius: 0px 5px 5px 0px;">
           <button type="submit" class="get-started-btn">Get Started Today</button>
         </div>
         <p class="d-xl-block d-lg-block d-md-block d-sm-block d-none">By creating account with IncubateIND, I agree to
@@ -1238,60 +1238,6 @@
     </div>
   </footer>
 
-
-  
-
-
-  <form action="" autocomplete="off">
-      <div class="row">
-        <div class="small-12 column">
-          <div class="form-floating-label">
-            <input type="email" id="email" name="email" required>
-            <label for="email">Email float up</label>
-          </div>
-        </div>
-      </div>
-    </form>
-
-
-<style>
-    
-.form-floating-label {
-  position: relative;
-  
-}
-
-.form-floating-label [type='text'],
-.form-floating-label [type='password'] {
-  margin-bottom: 0;
-  color: #8a8a8a;
-  font-size: 18px;
-  font-weight: 300;
-  padding: 30px 1rem 1rem 25px;
-}
-
-.form-floating-label label {
-  color: #cacaca;
-  font-size: 18px;
-  position: absolute;
-  pointer-events: none;
-  left: 25px;
-  bottom: 0;
-  transition: all 0.2s ease-in;
-  font-weight: 300;
-}
-
-.form-floating-label input:focus ~ label,
-.form-floating-label input:disabled[value] ~ label,
-.form-floating-label.has-value input ~ label {
-  top: 0;
-  font-size: 14px;
-  color: dodgerblue;
-  font-weight: 400;
-}
-
-
-</style>
 
 
 
