Mobile Login Modal

--- a/index.html
+++ b/index.html
@@ -77,6 +77,10 @@
           <button type="button" class="close" data-dismiss="modal" aria-label="Close" style="margin:-11px -54px; background: none !important; border: none !important;">
             <img src="assets/images/close.svg" style="width:18px;">
           </button>
+          <div class="row-mob-login sticky-top">
+              <a data-dismiss="modal" aria-label="Close"><i class="fas fa-arrow-left"></i></a>
+              <p>Login / Sign Up</p>
+          </div>
           <div class="row">
             <div class="col-sm-5" style="margin-right: -14px;">
               <div class="modal-login-left d-none d-xl-block d-lg-block d-md-block d-sm-block">
